# westies-hb-website

./: .gitignore  README.md  build.sh  check.sh  dev.sh  elm-watch.json  elm.json  example.setenv.sh  gen-db-seed.sh  index.html  package.json  pnpm-lock.yaml  setup-db.sh  test.sh
apps/elm-app/: index.html  package.json
apps/roc-server/: .env  build.sh  dev.sh  setenv.sh
apps/roc-server/src/: init_db.sql
db/: init_db.sql  seed.sql
roc-server/: .env  build.sh  check.sh  dev.sh  example.env  server.roc
roc-server/data/: data.json
roc-server/public/: style.css
roc-server/src/: init_db.sql  server.roc  setup.roc
src/: Event.roc  Locale.roc  ResultX.roc  SeedDb.roc  Time.roc  events.json  server.roc  style.css
src/elm-app/: Main.elm
src/roc-server/: server.roc  setup.roc
static-site-gen/platform/: Cargo.toml
