[package]
name = "host"
authors = ["The Roc Contributors"]
edition = "2021"
license = "UPL-1.0"
version = "0.0.1"

links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
libc = "0.2"
syntect = "5.0"
# roc_highlight = { path = "../../../roc/crates/highlight" }
roc_std = { git = "https://github.com/roc-lang/roc", rev = "7b1f2d2ac1f6e0b7a283cfbe932318f37a0a6861" }


# Default features include building a binary that we don't need
pulldown-cmark = { version = "0.9.2", default-features = false }

[workspace]
